deployment/vllm/service-vllm.yaml
apiVersion: v1
kind: Service
metadata:
  name: vllm
spec:
  selector:
    app: vllm
  ports:
    - name: http
      port: 80
      targetPort: 8080
