deployment/vllm/route-vllm.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: vllm
spec:
  to:
    kind: Service
    name: vllm
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
